name:                stream-timers
version:             0.1.0.0
synopsis:            Some stream timers, and experiments with them
description:         Please see README.md
homepage:            https://github.com/michaeljklein/stream-timers#readme
license:             BSD3
license-file:        LICENSE
author:              Michael J. Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael J. Klein
category:            library, benchmarking
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Timers
                     , Data.Timers.Example
                     , Data.Expire
  build-depends:       base >= 4.7 && < 5, containers >= 0.5.9, time >= 1.4, fixed-vector
  default-language:    Haskell2010

executable stream-timers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , stream-timers
  default-language:    Haskell2010

test-suite stream-timers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Data.Timers
                     , Test.Data.Timers.Example
                     , Test.Data.Expire
  main-is:             Spec.hs
  build-depends:       base
                     , stream-timers
                     , QuickCheck
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/stream-timers
